--- a/.docker/prometheus/prometheus.yml
+++ b/.docker/prometheus/prometheus.yml
@@ -1,13 +1,43 @@
+# my global config
+global:
+  scrape_interval: 15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+  # scrape_timeout is set to the global default (10s).
+
+# Alertmanager configuration
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+          # - alertmanager:9093
+
+# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+rule_files:
+  # - "first_rules.yml"
+  # - "second_rules.yml"
+
+# A scrape configuration containing exactly one endpoint to scrape:
+# Here it's Prometheus itself.
+
 scrape_configs:
+  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
+  - job_name: "prometheus"
+
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+
+    static_configs:
+      - targets: ["localhost:9090"]
+  
   - job_name: "mysql" # To get metrics about the mysql exporter’s targets
     params:
         # Not required. Will match value to child in config file. Default value is `client`.
         # auth_module: [client.servers]
         # auth_module: [client]
     static_configs:
-        - targets: ["0.0.0.0:9104"]
+        - targets: ["mysql:9104"]
           # All mysql hostnames or unix sockets to monitor.
-        - targets: ["0.0.0.0:3306"]
+        - targets: ["mysql:3306"]
         #  relabel_configs:
         #- source_labels: [__address__]
         #  target_label: __param_target
