--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,6 +55,7 @@ services:
       MYSQL_USER: teste
       MYSQL_PASSWORD: teste@2024
       MYSQL_ROOT_PASSWORD: teste@2024
+      MYSQLD_EXPORTER_PASSWORD: exporter@2024
     
     volumes:
       - ./.docker/mysql:/var/lib/mysql
